[gd_scene load_steps=9 format=3 uid="uid://bwjs3edi622nh"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_1s6cc"]
[ext_resource type="Texture2D" uid="uid://d3xodndkm7c7y" path="res://graphics/player/player.png" id="1_sbxoh"]
[ext_resource type="Texture2D" uid="uid://crgv63mgdjfry" path="res://graphics/decals/white.png" id="3_l80sp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uktck"]
radius = 64.0

[sub_resource type="Gradient" id="Gradient_mb5n3"]
offsets = PackedFloat32Array(0, 0.998124)
colors = PackedColorArray(0.301961, 0.835294, 0.996078, 0.827451, 0.321569, 0.835294, 1, 0.329412)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5nkcp"]
gradient = SubResource("Gradient_mb5n3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7tnpw"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 1100.0
initial_velocity_max = 1400.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = -1.60933e-05
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.8
color = Color(0, 0.672024, 0.789055, 0.827451)
color_ramp = SubResource("GradientTexture1D_5nkcp")
turbulence_enabled = true
turbulence_noise_scale = 5.07
turbulence_influence_min = 0.0
turbulence_influence_max = 0.054
turbulence_initial_displacement_min = -100.0
turbulence_initial_displacement_max = 1.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_b6qun"]
polygon = PackedVector2Array(43, -11, 55, -10, 59, -5, 70, -5, 75, 1, 85, 2, 92, 7, 96, 18, 94, 27, 90, 31, 85, 36, 75, 35, 65, 43, 59, 49, 49, 53, 25, 53, 22, 43, 10, 41, -16, 48, -42, 60, -58, 60, -72, 53, -75, 42, -80, 32, -87, 25, -94, 11, -97, -9, -96, -22, -89, -37, -77, -47, -63, -51, -53, -57, -37, -60, -24, -59, -16, -61, -4, -56, 6, -42, 10, -31, 24, -28, 34, -15)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_1s6cc")

[node name="PlayerImage" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_sbxoh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-36, -3)
shape = SubResource("CircleShape2D_uktck")

[node name="Lasertimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Grenadetimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]
position = Vector2(112, -28)
rotation = 1.5708

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(40, 26)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(47, 22)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(56, 26)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(93, 19)
emitting = false
process_material = SubResource("ParticleProcessMaterial_7tnpw")
texture = ExtResource("3_l80sp")
lifetime = 0.2
one_shot = true
explosiveness = 0.2

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_b6qun")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="Lasertimer" to="." method="_on_lasertimer_timeout"]
[connection signal="timeout" from="Grenadetimer" to="." method="_on_grenadetimer_timeout"]
